Correction of z-index for footer to optimize animation loading-spinner

--- a/css/menu.css
+++ b/css/menu.css
@@ -291,6 +291,8 @@ header a:hover {
 /* FOOTER */
 footer {
   background: #404040;
+  position: relative;
+  z-index: 50;
 }
 @media screen and (min-width: 640px) {
   footer {
