--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ button {
     transform: translateX(-0.5rem) translateY(1.8rem) scaleX(1) scaleY(1);
   }
   100% {
-    transform: translateX(-0.5rem) translateY(1.8rem) scaleX(35) scaleY(0.5);
+    transform: translateX(-0.5rem) translateY(1.8rem) scaleX(34) scaleY(0.5);
   }
 }
 @media screen and (min-width: 640px) {
@@ -475,6 +475,8 @@ header a:hover {
 /* FOOTER */
 footer {
   background: #404040;
+  position: relative;
+  z-index: 50;
 }
 @media screen and (min-width: 640px) {
   footer {
